Version 0.875
	* New version
	* Updated the version number in the documentation cover pages
	* Bugfix: errors are now ignored on file reading/writing, due to "ignorable" errors being thrown on Windows
	* Topic editor now shows the full topic in a tool tip

Version 0.870
	* New version
	* Fixed the "Hide manager" menu icon
	* Added a menu entry to load plugins from a user-selected directory
	* Bugfix: the script editor now closes properly instead of hanging when launcher as a stand-alone app
	* Changed the commandline option to launch the script editor: now -e, --edit, and --scripter can be used
	* Moved the contents of the "Emoji" tab to the "Text Input" tab in the "settings" dialog
	* Gave scripting it's own tab, and created a plugins tab in the "settings" dialog
	* Changed the plugin icon from the python image to a puzzle piece
	* Changed the "load plugin directory" icon to a puzzle piece with a magnifying glass
	* Removed "restart" option from the main menu
	* Disconnect entry in the main menu is now a "fancy" menu entry
	* Redesigned the main menu, using all "fancy" menu entries
	* Moved plugin stuff in the "Tools" menu to the "Settings" menu
	* Plugin menu now appears regardless of whether any plugins are installed or not
	* Plugin menu stuff is now in the permanent plugin menu
	* New event method: connecting()
	* New event method: exit()
	* Updated the plugin documentation to reflect the new "plugins" menu
	* Added a settings to the config file: a list of directories to also load plugins from
	* Added a bit to the "plugins" page in the "settings" dialog to set (and remove) directories to load plugins from
	* The plugins load list is now checked for duplicates (with duplicates being removed) before loading
	* Bugfix: syntax formatter now handles multi-char macro interpolation symbols
	* Added a "clear all" button to the add/remove plugin directories entry in the "settings" dialog