@@ -2042,6 +2042,11 @@ def connection(gui,client):
 	# Update connection display
 	build_connection_display(gui,client)
 
+	# Rebuild the main menu, so that the
+	# "disconnect" menu item appears
+	if not gui.is_disconnect_showing:
+		gui.buildMenuInterface()
+
 	if gui.current_page:
 		if hasattr(gui.current_page,"input"): gui.current_page.input.setFocus()
 
