@@ -3,6 +3,7 @@ Version 0.875
 	* Updated the version number in the documentation cover pages
 	* Bugfix: errors are now ignored on file reading/writing, due to "ignorable" errors being thrown on Windows
 	* Topic editor now shows the full topic in a tool tip
+	* Bugfix: disconnect menu item didn't appear until a channel was joined; it appears on connection now
 
 Version 0.870
 	* New version
